--- a/src/Components/pages/homepage/homePage.css
+++ b/src/Components/pages/homepage/homePage.css
@@ -1,4 +1,56 @@
+@import url(https://allfont.net/allfont.css?fonts=quantico-bold-italic);
+
 .banner img {
     width: 100%;
     height: auto;
+}
+
+.divisions{
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+    padding: 2.5rem 0;
+    background-color: #1d1c20;
+}
+.divisions h3 {
+
+    font-style: italic;
+
+    text-align: center;
+    font-size: 40px;
+    line-height: 64px;
+    margin: 0;
+    margin-top: 1rem;
+    margin-bottom: 50px;
+}
+
+.divisions h4 {
+    font-size: 40px;
+    line-height: 52.2px;
+    margin: 0 auto;
+    text-align: center;
+    width: 30%;
+    background-size: 75%;
+    max-width: 560px;
+}
+
+@media only screen and (max-width: 600px) {
+    .divisions img {
+        width: 300px;
+        height: auto;
+    }
+    .divisions h3 {
+        font-size: 30px;
+        line-height: 64px;
+        margin-bottom: 1rem;
+    }
+
+    .divisions h4 {
+        font-size: 30px;
+        line-height: 40px;
+        margin: 0 auto;
+        text-align: center;
+        width: 80%;
+    }
 }
