--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,16 @@
     font-size: 1.5rem;
     padding: 4rem auto;
     margin: 4rem auto;
+    margin-bottom: 0;
     text-align: end;
     background: #1d1c20;
+}
+
+@media only screen and (max-width: 600px) {
+    .temporary-footer {
+        text-align: center;
+    }
+    .footer-logo {
+        margin: 0 auto;
+    }
 }
