--- a/src/Components/pages/homepage/homePage.css
+++ b/src/Components/pages/homepage/homePage.css
@@ -155,6 +155,17 @@
         margin: 0 60px;
         row-gap: 4rem;
     }
+
+    .Footer {
+        flex-direction: column;
+        justify-content: center;
+        align-items: flex-start;
+        margin: 0 auto;
+    }
+
+    .footer-logo {
+        margin: 1rem auto;
+    }
     
 }
 
